// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots @components/organisms/AddressForm default 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c18 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c15 {
  padding-top: 1.4rem;
  margin-bottom: 1.875rem;
}

.c17 {
  top: 100%;
}

.c13 {
  background-color: transparent;
  color: #9194A7;
  left: 0px;
  position: absolute;
  font-size: 0.9rem;
  pointer-events: none;
  top: -1.5rem;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #E4E5ED;
  border-radius: 4px;
  color: #E4E5ED;
  outline: none;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.c10:hover {
  color: #E4E5ED;
  border-color: #00B0CA;
}

.c11 {
  position: relative;
  width: 100%;
  padding-right: 1.5rem;
}

.c12 {
  padding: 0.75rem 1rem;
  margin: 0;
  border: none;
  color: #131336;
  width: 100%;
  font-size: 0.9rem;
  outline: none;
  background-color: transparent;
}

.c12::-webkit-input-placeholder {
  color: #9194A7;
}

.c12::-moz-placeholder {
  color: #9194A7;
}

.c12:-ms-input-placeholder {
  color: #9194A7;
}

.c12::placeholder {
  color: #9194A7;
}

.c16 {
  fill: #00B0CA;
  position: absolute;
  right: 1rem;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transform-origin: center center;
  -ms-transform-origin: center center;
  transform-origin: center center;
}

.c9 {
  padding-top: 1.4rem;
  margin-bottom: 1rem;
  position: relative;
}

.c14 {
  position: absolute;
  top: 100%;
}

.c2 {
  width: 100%;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c8 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 1rem;
}

.c8 > div {
  width: calc(50% - 1.875rem / 2);
}

.c4 {
  padding-top: 1rem;
  padding-bottom: 2rem;
  width: 100%;
}

.c5 {
  padding-bottom: 0.5rem;
  margin-bottom: 1.5rem;
}

.c6 {
  display: inline-block;
  color: #fff;
  background-color: #0050B5;
  border-radius: 5rem;
  height: 1.9rem;
  padding: 0.4rem;
  text-align: center;
  width: 1.9rem;
}

.c7 {
  font-weight: bolder;
  padding-left: 1rem;
}

.c1 {
  width: 600px;
}

@media (max-width:540px) {
  .c8 > div {
    width: 100%;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <form
      className="c2"
      onSubmit={[Function]}
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <span
              className="c6"
            >
              1
            </span>
            <span
              className="c7"
            >
              Cliente
            </span>
          </div>
          <div
            className="c8"
          >
            <div
              className="c9"
            >
              <div
                className="c10"
                disabled={false}
              >
                <div
                  className="c11"
                >
                  <input
                    autoComplete="given-name"
                    className="c12"
                    data-cy="addressFormFirstName"
                    disabled={false}
                    name="firstName"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    placeholder="Nombre Completo"
                    value=""
                  />
                  <label
                    className="c13"
                    disabled={false}
                  >
                    Nombre Completo
                  </label>
                </div>
              </div>
              <div
                className="c14"
              />
            </div>
          </div>
          <div
            className="c8"
          >
            <div
              className="c9"
            >
              <div
                className="c10"
                disabled={false}
              >
                <div
                  className="c11"
                >
                  <input
                    autoComplete="tel"
                    className="c12"
                    data-cy="addressFormPhone"
                    disabled={false}
                    name="phone"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    placeholder="Telefono"
                    value=""
                  />
                  <label
                    className="c13"
                    disabled={false}
                  >
                    Telefono
                  </label>
                </div>
              </div>
              <div
                className="c14"
              />
            </div>
          </div>
        </div>
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <span
              className="c6"
            >
              2
            </span>
            <span
              className="c7"
            >
              Dirección
            </span>
          </div>
          <div
            className="c8"
          >
            <div
              className="c9"
            >
              <div
                className="c10"
                disabled={false}
              >
                <div
                  className="c11"
                >
                  <input
                    autoComplete="address-line1"
                    className="c12"
                    data-cy="addressFormStreetAddress1"
                    disabled={false}
                    name="streetAddress1"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    placeholder="Dirección"
                    value=""
                  />
                  <label
                    className="c13"
                    disabled={false}
                  >
                    Dirección
                  </label>
                </div>
              </div>
              <div
                className="c14"
              />
            </div>
            <div
              className="c9"
            >
              <div
                className="c10"
                disabled={false}
              >
                <div
                  className="c11"
                >
                  <input
                    autoComplete="address-line2"
                    className="c12"
                    data-cy="addressFormStreetAddress2"
                    disabled={false}
                    name="streetAddress2"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    placeholder="Información adicional (opcional)"
                    value=""
                  />
                  <label
                    className="c13"
                    disabled={false}
                  >
                    Información adicional (opcional)
                  </label>
                </div>
              </div>
              <div
                className="c14"
              />
            </div>
          </div>
          <div
            className="c8"
          >
            <div
              className="c15"
            >
              <div
                className="css-1pcexqc-container"
                onKeyDown={[Function]}
              >
                <div
                  className="css-d1vkk-control"
                  onMouseDown={[Function]}
                  onTouchEnd={[Function]}
                >
                  <div
                    className="css-tntsk8"
                  >
                    <div
                      className="css-151xaom-placeholder"
                    >
                      
                    </div>
                    <div
                      className="css-1g6gooi"
                    >
                      <div
                        className=""
                        style={
                          Object {
                            "display": "inline-block",
                          }
                        }
                      >
                        <input
                          aria-autocomplete="list"
                          autoCapitalize="none"
                          autoComplete="off"
                          autoCorrect="off"
                          data-cy="addressFormCity"
                          disabled={false}
                          id="react-select-7-input"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          spellCheck="false"
                          style={
                            Object {
                              "background": 0,
                              "border": 0,
                              "boxSizing": "content-box",
                              "color": "inherit",
                              "fontSize": "inherit",
                              "label": "input",
                              "opacity": 1,
                              "outline": 0,
                              "padding": 0,
                              "width": "1px",
                            }
                          }
                          tabIndex="0"
                          type="text"
                          value=""
                        />
                        <div
                          style={
                            Object {
                              "height": 0,
                              "left": 0,
                              "overflow": "scroll",
                              "position": "absolute",
                              "top": 0,
                              "visibility": "hidden",
                              "whiteSpace": "pre",
                            }
                          }
                        >
                          
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className="c16"
                    rotate="false"
                  >
                    <svg
                      height={10}
                      viewBox="0 0 32 32"
                      width={10}
                    >
                      <path
                        d="M16 29.856l-15.999-27.712h31.999l-15.999 27.712z"
                        fill="inherit"
                      />
                    </svg>
                  </div>
                </div>
                <label
                  className="c13"
                  disabled={false}
                >
                  Distrito
                </label>
              </div>
              <div
                className="c17"
              />
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
  <div
    className="c18"
  />
</div>
`;

exports[`Storyshots @components/organisms/AddressForm with errors 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c21 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c15 {
  color: #E84545;
  font-size: 12px;
  font-weight: 300;
}

.c16 {
  margin: 0;
}

.c18 {
  padding-top: 1.4rem;
  margin-bottom: 1.875rem;
}

.c20 {
  top: 100%;
}

.c13 {
  background-color: transparent;
  color: #9194A7;
  left: 0px;
  position: absolute;
  font-size: 0.9rem;
  pointer-events: none;
  top: -1.5rem;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #E4E5ED;
  border-radius: 4px;
  color: #E4E5ED;
  outline: none;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.c17:hover {
  color: #E4E5ED;
  border-color: #00B0CA;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #E84545;
  border-radius: 4px;
  color: #E84545;
  outline: none;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.c10:hover {
  color: #131336;
  border-color: #E84545;
}

.c11 {
  position: relative;
  width: 100%;
  padding-right: 1.5rem;
}

.c12 {
  padding: 0.75rem 1rem;
  margin: 0;
  border: none;
  color: #131336;
  width: 100%;
  font-size: 0.9rem;
  outline: none;
  background-color: transparent;
}

.c12::-webkit-input-placeholder {
  color: #9194A7;
}

.c12::-moz-placeholder {
  color: #9194A7;
}

.c12:-ms-input-placeholder {
  color: #9194A7;
}

.c12::placeholder {
  color: #9194A7;
}

.c19 {
  fill: #00B0CA;
  position: absolute;
  right: 1rem;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transform-origin: center center;
  -ms-transform-origin: center center;
  transform-origin: center center;
}

.c9 {
  padding-top: 1.4rem;
  margin-bottom: 1rem;
  position: relative;
}

.c14 {
  position: absolute;
  top: 100%;
}

.c2 {
  width: 100%;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c8 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 1rem;
}

.c8 > div {
  width: calc(50% - 1.875rem / 2);
}

.c4 {
  padding-top: 1rem;
  padding-bottom: 2rem;
  width: 100%;
}

.c5 {
  padding-bottom: 0.5rem;
  margin-bottom: 1.5rem;
}

.c6 {
  display: inline-block;
  color: #fff;
  background-color: #0050B5;
  border-radius: 5rem;
  height: 1.9rem;
  padding: 0.4rem;
  text-align: center;
  width: 1.9rem;
}

.c7 {
  font-weight: bolder;
  padding-left: 1rem;
}

.c1 {
  width: 600px;
}

@media (max-width:540px) {
  .c8 > div {
    width: 100%;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <form
      className="c2"
      onSubmit={[Function]}
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <span
              className="c6"
            >
              1
            </span>
            <span
              className="c7"
            >
              Cliente
            </span>
          </div>
          <div
            className="c8"
          >
            <div
              className="c9"
            >
              <div
                className="c10"
                disabled={false}
              >
                <div
                  className="c11"
                >
                  <input
                    autoComplete="given-name"
                    className="c12"
                    data-cy="addressFormFirstName"
                    disabled={false}
                    name="firstName"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    placeholder="Nombre Completo"
                    value=""
                  />
                  <label
                    className="c13"
                    disabled={false}
                  >
                    Nombre Completo
                  </label>
                </div>
              </div>
              <div
                className="c14"
              >
                <div
                  className="c15"
                >
                  <p
                    className="c16"
                  >
                    This is error
                  </p>
                </div>
              </div>
            </div>
          </div>
          <div
            className="c8"
          >
            <div
              className="c9"
            >
              <div
                className="c17"
                disabled={false}
              >
                <div
                  className="c11"
                >
                  <input
                    autoComplete="tel"
                    className="c12"
                    data-cy="addressFormPhone"
                    disabled={false}
                    name="phone"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    placeholder="Telefono"
                    value=""
                  />
                  <label
                    className="c13"
                    disabled={false}
                  >
                    Telefono
                  </label>
                </div>
              </div>
              <div
                className="c14"
              />
            </div>
          </div>
        </div>
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <span
              className="c6"
            >
              2
            </span>
            <span
              className="c7"
            >
              Dirección
            </span>
          </div>
          <div
            className="c8"
          >
            <div
              className="c9"
            >
              <div
                className="c17"
                disabled={false}
              >
                <div
                  className="c11"
                >
                  <input
                    autoComplete="address-line1"
                    className="c12"
                    data-cy="addressFormStreetAddress1"
                    disabled={false}
                    name="streetAddress1"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    placeholder="Dirección"
                    value=""
                  />
                  <label
                    className="c13"
                    disabled={false}
                  >
                    Dirección
                  </label>
                </div>
              </div>
              <div
                className="c14"
              />
            </div>
            <div
              className="c9"
            >
              <div
                className="c17"
                disabled={false}
              >
                <div
                  className="c11"
                >
                  <input
                    autoComplete="address-line2"
                    className="c12"
                    data-cy="addressFormStreetAddress2"
                    disabled={false}
                    name="streetAddress2"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    placeholder="Información adicional (opcional)"
                    value=""
                  />
                  <label
                    className="c13"
                    disabled={false}
                  >
                    Información adicional (opcional)
                  </label>
                </div>
              </div>
              <div
                className="c14"
              />
            </div>
          </div>
          <div
            className="c8"
          >
            <div
              className="c18"
            >
              <div
                className="css-1pcexqc-container"
                onKeyDown={[Function]}
              >
                <div
                  className="css-d1vkk-control"
                  onMouseDown={[Function]}
                  onTouchEnd={[Function]}
                >
                  <div
                    className="css-tntsk8"
                  >
                    <div
                      className="css-151xaom-placeholder"
                    >
                      
                    </div>
                    <div
                      className="css-1g6gooi"
                    >
                      <div
                        className=""
                        style={
                          Object {
                            "display": "inline-block",
                          }
                        }
                      >
                        <input
                          aria-autocomplete="list"
                          autoCapitalize="none"
                          autoComplete="off"
                          autoCorrect="off"
                          data-cy="addressFormCity"
                          disabled={false}
                          id="react-select-8-input"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          spellCheck="false"
                          style={
                            Object {
                              "background": 0,
                              "border": 0,
                              "boxSizing": "content-box",
                              "color": "inherit",
                              "fontSize": "inherit",
                              "label": "input",
                              "opacity": 1,
                              "outline": 0,
                              "padding": 0,
                              "width": "1px",
                            }
                          }
                          tabIndex="0"
                          type="text"
                          value=""
                        />
                        <div
                          style={
                            Object {
                              "height": 0,
                              "left": 0,
                              "overflow": "scroll",
                              "position": "absolute",
                              "top": 0,
                              "visibility": "hidden",
                              "whiteSpace": "pre",
                            }
                          }
                        >
                          
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className="c19"
                    rotate="false"
                  >
                    <svg
                      height={10}
                      viewBox="0 0 32 32"
                      width={10}
                    >
                      <path
                        d="M16 29.856l-15.999-27.712h31.999l-15.999 27.712z"
                        fill="inherit"
                      />
                    </svg>
                  </div>
                </div>
                <label
                  className="c13"
                  disabled={false}
                >
                  Distrito
                </label>
              </div>
              <div
                className="c20"
              />
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
  <div
    className="c21"
  />
</div>
`;

exports[`Storyshots @components/organisms/AddressForm with partial data 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c18 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c15 {
  padding-top: 1.4rem;
  margin-bottom: 1.875rem;
}

.c17 {
  top: 100%;
}

.c13 {
  background-color: transparent;
  color: #9194A7;
  left: 0px;
  position: absolute;
  font-size: 0.9rem;
  pointer-events: none;
  top: -1.5rem;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #E4E5ED;
  border-radius: 4px;
  color: #E4E5ED;
  outline: none;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.c10:hover {
  color: #E4E5ED;
  border-color: #00B0CA;
}

.c11 {
  position: relative;
  width: 100%;
  padding-right: 1.5rem;
}

.c12 {
  padding: 0.75rem 1rem;
  margin: 0;
  border: none;
  color: #131336;
  width: 100%;
  font-size: 0.9rem;
  outline: none;
  background-color: transparent;
}

.c12::-webkit-input-placeholder {
  color: #9194A7;
}

.c12::-moz-placeholder {
  color: #9194A7;
}

.c12:-ms-input-placeholder {
  color: #9194A7;
}

.c12::placeholder {
  color: #9194A7;
}

.c16 {
  fill: #00B0CA;
  position: absolute;
  right: 1rem;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transform-origin: center center;
  -ms-transform-origin: center center;
  transform-origin: center center;
}

.c9 {
  padding-top: 1.4rem;
  margin-bottom: 1rem;
  position: relative;
}

.c14 {
  position: absolute;
  top: 100%;
}

.c2 {
  width: 100%;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c8 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 1rem;
}

.c8 > div {
  width: calc(50% - 1.875rem / 2);
}

.c4 {
  padding-top: 1rem;
  padding-bottom: 2rem;
  width: 100%;
}

.c5 {
  padding-bottom: 0.5rem;
  margin-bottom: 1.5rem;
}

.c6 {
  display: inline-block;
  color: #fff;
  background-color: #0050B5;
  border-radius: 5rem;
  height: 1.9rem;
  padding: 0.4rem;
  text-align: center;
  width: 1.9rem;
}

.c7 {
  font-weight: bolder;
  padding-left: 1rem;
}

.c1 {
  width: 600px;
}

@media (max-width:540px) {
  .c8 > div {
    width: 100%;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <form
      className="c2"
      onSubmit={[Function]}
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <span
              className="c6"
            >
              1
            </span>
            <span
              className="c7"
            >
              Cliente
            </span>
          </div>
          <div
            className="c8"
          >
            <div
              className="c9"
            >
              <div
                className="c10"
                disabled={false}
              >
                <div
                  className="c11"
                >
                  <input
                    autoComplete="given-name"
                    className="c12"
                    data-cy="addressFormFirstName"
                    disabled={false}
                    name="firstName"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    placeholder="Nombre Completo"
                    value="John"
                  />
                  <label
                    className="c13"
                    disabled={false}
                  >
                    Nombre Completo
                  </label>
                </div>
              </div>
              <div
                className="c14"
              />
            </div>
          </div>
          <div
            className="c8"
          >
            <div
              className="c9"
            >
              <div
                className="c10"
                disabled={false}
              >
                <div
                  className="c11"
                >
                  <input
                    autoComplete="tel"
                    className="c12"
                    data-cy="addressFormPhone"
                    disabled={false}
                    name="phone"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    placeholder="Telefono"
                    value="555-55555"
                  />
                  <label
                    className="c13"
                    disabled={false}
                  >
                    Telefono
                  </label>
                </div>
              </div>
              <div
                className="c14"
              />
            </div>
          </div>
        </div>
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <span
              className="c6"
            >
              2
            </span>
            <span
              className="c7"
            >
              Dirección
            </span>
          </div>
          <div
            className="c8"
          >
            <div
              className="c9"
            >
              <div
                className="c10"
                disabled={false}
              >
                <div
                  className="c11"
                >
                  <input
                    autoComplete="address-line1"
                    className="c12"
                    data-cy="addressFormStreetAddress1"
                    disabled={false}
                    name="streetAddress1"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    placeholder="Dirección"
                    value="Street line 1"
                  />
                  <label
                    className="c13"
                    disabled={false}
                  >
                    Dirección
                  </label>
                </div>
              </div>
              <div
                className="c14"
              />
            </div>
            <div
              className="c9"
            >
              <div
                className="c10"
                disabled={false}
              >
                <div
                  className="c11"
                >
                  <input
                    autoComplete="address-line2"
                    className="c12"
                    data-cy="addressFormStreetAddress2"
                    disabled={false}
                    name="streetAddress2"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    placeholder="Información adicional (opcional)"
                    value="Street line 2"
                  />
                  <label
                    className="c13"
                    disabled={false}
                  >
                    Información adicional (opcional)
                  </label>
                </div>
              </div>
              <div
                className="c14"
              />
            </div>
          </div>
          <div
            className="c8"
          >
            <div
              className="c15"
            >
              <div
                className="css-1pcexqc-container"
                onKeyDown={[Function]}
              >
                <div
                  className="css-d1vkk-control"
                  onMouseDown={[Function]}
                  onTouchEnd={[Function]}
                >
                  <div
                    className="css-tntsk8"
                  >
                    <div
                      className="css-151xaom-placeholder"
                    >
                      
                    </div>
                    <div
                      className="css-1g6gooi"
                    >
                      <div
                        className=""
                        style={
                          Object {
                            "display": "inline-block",
                          }
                        }
                      >
                        <input
                          aria-autocomplete="list"
                          autoCapitalize="none"
                          autoComplete="off"
                          autoCorrect="off"
                          data-cy="addressFormCity"
                          disabled={false}
                          id="react-select-9-input"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          spellCheck="false"
                          style={
                            Object {
                              "background": 0,
                              "border": 0,
                              "boxSizing": "content-box",
                              "color": "inherit",
                              "fontSize": "inherit",
                              "label": "input",
                              "opacity": 1,
                              "outline": 0,
                              "padding": 0,
                              "width": "1px",
                            }
                          }
                          tabIndex="0"
                          type="text"
                          value=""
                        />
                        <div
                          style={
                            Object {
                              "height": 0,
                              "left": 0,
                              "overflow": "scroll",
                              "position": "absolute",
                              "top": 0,
                              "visibility": "hidden",
                              "whiteSpace": "pre",
                            }
                          }
                        >
                          
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className="c16"
                    rotate="false"
                  >
                    <svg
                      height={10}
                      viewBox="0 0 32 32"
                      width={10}
                    >
                      <path
                        d="M16 29.856l-15.999-27.712h31.999l-15.999 27.712z"
                        fill="inherit"
                      />
                    </svg>
                  </div>
                </div>
                <label
                  className="c13"
                  disabled={false}
                >
                  Distrito
                </label>
              </div>
              <div
                className="c17"
              />
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
  <div
    className="c18"
  />
</div>
`;
